2007-05-02  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac: Post-release version bump.

=== 2.13.1 ===
2007-05-02  Johan Dahlin  <jdahlin@async.com.br>

	* pygobject-2.0-uninstalled.pc.in: Add libdir.
	Fixes #435132 (Luca Ferretti)

2007-05-01  Johan Dahlin  <johan@gnome.org>

	* gobject/propertyhelper.py:
	* tests/test_properties.py:

	Store property values in the descriptor per instance, add a test.

	* examples/properties.py:
	* gobject/Makefile.am:
	* gobject/__init__.py:
	* gobject/constants.py.in:
	* gobject/generate-constants.c: (main):
	* gobject/propertyhelper.py:
	* tests/Makefile.am:
	* tests/test_enum.py:
	* tests/test_interface.py:
	* tests/test_properties.py:

	Add a property helper, fixes #338098

2007-04-30  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* tests/common.py (importModules): Import testhelper first so that
	g_thread_init is called before init_pygobject.

	* tests/testhelpermodule.c (inittesthelper): Call g_thread_init
	before init_pygobject.

	* tests/test_subtype.py (TestSubType.testDescriptor): Unit test
	for the bug below.

	* gobject/pygobject.c (pygobject_setattro): Account for the case
	when attribute setting doesn't actually create an instance
	dictionary, in which case pygobject_switch_to_toggle_ref would be
	called twice, thereby causing gobject error.
	Fixes #434659

2007-04-29  James Livingstone  <doclivingstone@gmail.com>

	reviewed by: Johan Dahlin  <johan@gnome.org>

	* gobject/pygtype.c: (pyg_value_from_pyobject):
	* tests/test_signal.py:

	Add a missing else to avoid throwing a TypeError.
	Includes a test written by Ed Catmur.
	Fixes #374653

2007-04-29  Johan Dahlin  <johan@gnome.org>

	* gobject/pygtype.c: (pyg_value_array_from_pyobject):
	* tests/test_gtype.py:
	* tests/testhelpermodule.c: (_wrap_test_value_array):

	Treat None in a GValueArray as pointer/NULL, patch by
	Ed Catmur, fixes #352209.

2007-04-29  Loïc Minier  <lool+gnome@via.ecp.fr>

	reviewed by: Johan Dahlin  <johan@gnome.org>

	* autogen.sh:
