@@ -1,3 +1,12 @@
+2007-05-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* tests/Makefile.am (INCLUDES): Idem.
+
+	* gobject/Makefile.am (INCLUDES): Add -D_XOPEN_SOURCE=600 and
+	-D__EXTENSIONS__ to make it compile with c99 and Sun C compiler.
+
+	Fixes #339924: gnome-python doesn't compile on opensolaris.
+
 2007-05-02  Johan Dahlin  <jdahlin@async.com.br>
 
 	* configure.ac: Post-release version bump.
